react/src/components/job card/JobCard.css
.card {
    height: 200px;
    width: 400px;
    min-width: 250px;
    padding: 1.5rem;
    border-radius: 16px;
    background: #17141d;
    display: flex;
    flex-direction: column;
    transition-duration: 600ms;
    transition-timing-function: ease;
    margin: 0;
    scroll-snap-align: start;
    clear: both;
    position: relative;
    text-align: center;
}

.card:focus-within,
.card:hover ~ .card {
    transform: translateX(-130px);
}

.card:not(:hover) {
    transform: translateX(-70px);
}

.card:after {
    background: linear-gradient(transparent, mediumslateblue, transparent);
    height: 120px;
    width: 1px;
    position: absolute;
    right: -1px;
    content: "";
    transition: top, opacity;
    transition-duration: 600ms;
    transition-timing-function: ease;
}

.card:after {
    top: 65%;
    opacity: 0;
}

.card:hover:after {
    top: 25%;
    opacity: 1;
}

.card-body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    margin-top: 20px;
}

.card-body h1 {
    color: #fff;
    font-size: 1.75rem;
    margin: 0;
    font-weight: 10;
}

.card-body p {
    color: #fff;
    font-size: 1rem;
    font-weight: 5;
    margin: 0;
}

.header-wrapper {
    display: flex;
    flex-direction: row;
    /* justify-content: space-between; */
    align-items: flex-start;
}

.source-logo {
    display: flex; /* Use flexbox */
    justify-content: center; /* Center horizontally */
    align-items: center; /* Center vertically */
    height: 50px;
    width: 50px;
    border-radius: 10%;
    background-color: #2c2736;
}

.source-logo img {
    max-width: 80%; /* Ensure image doesn't exceed container width */
    max-height: 80%; /* Ensure image doesn't exceed container height */
    border-radius: inherit; /* Inherit border-radius from parent */
}

.post-info {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: flex-start;
    height: 100%;
    width: 50%;
    color: #fff;
    margin-left: 10px;
}

.post-info-title {
    font-size: 10px;
    font-weight: 500;
    margin-bottom: 2px;
}

.post-info-posted {
    font-size: 10px;
    font-weight: 100;
    margin: 0;
}

.apply {
    font-family: "futura";
    font-weight: 500;
    background-color: #fed85d;
    width: 60px;
    height: 25px;
    padding-bottom: 3px;
    border-radius: 5px;
    display: flex;
    color: #fffbec;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    transition: box-shadow 0.3s ease; /* Add transition for smooth hover effect */
    margin-left: 20px;
}

.apply:hover {
    box-shadow: 0 0 15px 4px #fed85d; /* Add glow effect on hover */
}

.card-footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: #e4e7ed;
}

.card-footer span {
    color: white;
    font-weight: bold;
}

.progress-bar {
    position: relative;
    width: 100%;
    height: 10px;
    background-color: #2c2736;
    border-radius: 5px;
    margin-top: 10px;
}

.filled-progress,
.overlay-progress {
    position: absolute;
    top: 0;
    height: 100%;
    background-color: #fed85d;
    border-radius: 5px;
}

